--- a/optionsform.ui
+++ b/optionsform.ui
@@ -21,7 +21,7 @@
    <item row="2" column="0">
     <widget class="QTabWidget" name="autoSaveTabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="breeding">
       <attribute name="title">
@@ -686,7 +686,7 @@
                <string>Log internally</string>
               </property>
               <property name="checked">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
              </widget>
             </item>
